--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "content_scripts": [
         {
             "matches": ["https://www.ptt.cc/bbs/*"],
-            "js": ["ptt-tools.js"]
+            "js": ["ptt-tools.js"],
+            "css": ["content.css"]
         }
     ]
 }
