改為只在文章頁面執行，並修改檔名

--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,9 @@
 
     "content_scripts": [
         {
-            "matches": ["https://www.ptt.cc/bbs/*"],
-            "js": ["ptt-tools.js"],
-            "css": ["content.css"]
+            "matches": ["https://www.ptt.cc/bbs/*/M.*.html"],
+            "js": ["article.js"],
+            "css": ["article.css"]
         }
     ]
 }
