--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 2,
-    "name": "PTT-Tools",
+    "name": "PTT-Web-Enhanced",
     "version": "1.0",
 
-    "description": "幫PTT web版增加一些方便的功能",
+    "description": "幫 PTT web 版增加各種方便的功能",
 
     "content_scripts": [
         {
