--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
     "description": "幫 PTT web 版增加各種方便的功能",
 
     "permissions": [
-        "downloads"
+        "downloads",
+        "storage"
     ],
 
     "background": {
@@ -19,5 +20,9 @@
             "js": ["article.js"],
             "css": ["article.css"]
         }
-    ]
+    ],
+
+    "options_ui": {
+        "page": "options.html"
+    }
 }
