選項頁面數個增加選項，並實際套用到文章頁面
 - 顯示樓層

 - 推噓文統計

 - 高亮度文章作者ID

 - 點選圖片進行下載

--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,10 @@
     "content_scripts": [
         {
             "matches": ["https://www.ptt.cc/bbs/*/M.*.html"],
-            "js": ["article.js"],
+            "js": [
+                "utils/settings.js",
+                "article.js"
+            ],
             "css": ["article.css"]
         }
     ],
