提早文章頁面腳本載入的時間點，以加快載入速度
由所有資源載入完畢，提早為DOM載入完畢

--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,8 @@
                 "utils/helpers.js",
                 "article.js"
             ],
-            "css": ["article.css"]
+            "css": ["article.css"],
+            "run_at": "document_end"
         }
     ],
 
