--- a/src/manifest.json
+++ b/src/manifest.json
@@ -46,6 +46,7 @@
     ],
 
     "options_ui": {
-        "page": "options.html"
+        "page": "options.html",
+        "open_in_tab": true
     }
 }
