--- a/src/manifest.json
+++ b/src/manifest.json
@@ -58,6 +58,11 @@
         }
     ],
 
+    "browser_action": {
+        "default_title": "PTT Web Enhanced",
+        "default_popup": "options.html"
+    },
+
     "options_ui": {
         "page": "options.html",
         "open_in_tab": true
