--- a/src/manifest.json
+++ b/src/manifest.json
@@ -12,6 +12,12 @@
         }
     },
 
+    "icons": {
+        "16": "icon-16.png",
+        "32": "icon-32.png",
+        "128": "icon-128.png"
+    },
+
     "permissions": [
         "downloads",
         "storage"
@@ -59,6 +65,10 @@
     ],
 
     "browser_action": {
+        "default_icon": {
+          "16": "icon-16.png",
+          "32": "icon-32.png"
+        },
         "default_title": "PTT Web Enhanced",
         "default_popup": "options.html"
     },
